--- a/app/views/prorogation_period/show.html.erb
+++ b/app/views/prorogation_period/show.html.erb
@@ -6,7 +6,7 @@
 	<%# ... we know this is a prorogation immediately preceding dissolution. %>
 	<%= content_tag( 'p', "The #{@prorogation_period.number.ordinalize} prorogation of the #{link_to( "#{@preceding_session.parliament_period.number.ordinalize} Parliament", parliament_show_url( :parliament => @preceding_session.parliament_period_id ) )}, falling between the #{link_to( "#{@preceding_session.number.ordinalize} session", session_show_url( :session => @preceding_session.id ) )} and dissolution.".html_safe ) %>
 	
-	<%= content_tag( 'p', "Papers laid during this prorogation are recorded by both Houses in the #{link_to( "#{@following_session.number.ordinalize} session", session_show_url( :session => @following_session.id ) )} of the #{link_to( "#{@following_session.parliament_period.number.ordinalize} Parliament", parliament_show_url( :parliament => @following_session.parliament_period_id ) )}.".html_safe ) %>
+	<%= content_tag( 'p', "Papers laid during this prorogation are reported by both Houses in the #{link_to( "#{@following_session.number.ordinalize} session", session_show_url( :session => @following_session.id ) )} of the #{link_to( "#{@following_session.parliament_period.number.ordinalize} Parliament", parliament_show_url( :parliament => @following_session.parliament_period_id ) )}.".html_safe ) %>
 	
 <%# Otherwise, if the preceding session and the following session are part of the same Parliament period ...%>
 <% else -%>
@@ -14,6 +14,5 @@
 	<%# ... we know this is a prorogation immediately preceding a new session. %>
 	<%= content_tag( 'p', "The #{@prorogation_period.number.ordinalize} prorogation of the #{link_to( "#{@preceding_session.parliament_period.number.ordinalize} Parliament", parliament_show_url( :parliament => @preceding_session.parliament_period_id ) )}, falling between the #{link_to( @preceding_session.number.ordinalize, session_show_url( :session => @preceding_session.id ) )} and #{link_to( @following_session.number.ordinalize, session_show_url( :session => @following_session.id ) )} sessions.".html_safe ) %>
 	
-	<%= content_tag( 'p', "Papers laid during this prorogation are recorded by both Houses in the #{@following_session.number.ordinalize} session of the #{@following_session.parliament_period.number.ordinalize} Parliament.".html_safe ) %>
-	
+	<%= content_tag( 'p', "Papers laid during this prorogation are reported by both Houses in the #{@following_session.number.ordinalize} session of the #{@following_session.parliament_period.number.ordinalize} Parliament.".html_safe ) %>
 <% end -%>
