style form grammar correction: if either House rises, not if either Houses rise

--- a/app/views/calculator/_style_form.html.erb
+++ b/app/views/calculator/_style_form.html.erb
@@ -3,7 +3,7 @@
 		<legend>Calculation style</legend>
 		<p>
 		<label class="radio">
-		<input type="radio" id="calculation-style-1" name="calculation-style" value="1" required <% if @calculation_style == 1 -%>checked<% end -%>> Bicameral instruments (clock stops if either Houses rises)</label>
+		<input type="radio" id="calculation-style-1" name="calculation-style" value="1" required <% if @calculation_style == 1 -%>checked<% end -%>> Bicameral instruments (clock stops if either House rises)</label>
 		</p>
 		<p>
 		<label class="radio">
