--- a/app/views/meta/index.html.erb
+++ b/app/views/meta/index.html.erb
@@ -1,18 +1,13 @@
 <ul>
-
-<li><%= link_to( 'Using the application', meta_using_url ) %></li>
-
-<li><%= link_to( 'How the calendar uses the information you create', meta_calendar_sync_url ) %></li>
-
-<li><%= link_to( 'What to do at prorogation and dissolution', meta_prorogation_dissolution_url ) %></li>
-
-<li><%= link_to( 'Database schema [PNG]', meta_schema_url ) %></li>
-
+	<li><%= link_to( 'Using the application', meta_using_url ) %></li>
+	<li><%= link_to( 'How the calendar uses the information you create', meta_calendar_sync_url ) %></li>
+	<li><%= link_to( 'What to do at prorogation and dissolution', meta_prorogation_dissolution_url ) %></li>
+	<li><%= link_to( 'Database schema [PNG]', meta_schema_url ) %></li>
 	<li><%= link_to( 'Source code: github.com/ukparliament/egg-timer', 'https://github.com/ukparliament/egg-timer' ) %></li>
-	
 	<li><%= link_to( 'Code comments', meta_comment_url )  %></li>
 	<li><%= link_to( 'Calendar subscriptions', meta_subscribe_url )  %></li>
 	<li><%= link_to( 'MacOS application', meta_app_url )  %></li>
 	<li><%= link_to( 'Recess date checker', meta_recess_checker_url )  %></li>
 	<li><%= link_to( 'Calendar sync checker', meta_calendar_sync_checker_url )  %></li>
+	<li><%= link_to( 'Detailed sync logs', meta_detailed_sync_logs_path )  %></li>
 </ul>
