fixed link to 57th parliament

--- a/app/views/calculator/interval.html.erb
+++ b/app/views/calculator/interval.html.erb
@@ -1,4 +1,4 @@
-<%= content_tag( 'p', "This calculation depends on sitting day data. Sitting day data is complete for both Houses since the start of the #{link_to( '57th Parliament', session_show_url( :session => 6 ) )}.".html_safe ) %>
+<%= content_tag( 'p', "This calculation depends on sitting day data. Sitting day data is complete for both Houses since the 13th June 2017, the start of the #{link_to( '57th Parliament', parliament_show_url( :parliament => 57 ) )}.".html_safe ) %>
 
 
 <form action="/egg-timer/calculator/interval/calculate" method="GET" id="calculator">
