--- a/app/views/meta/index.html.erb
+++ b/app/views/meta/index.html.erb
@@ -1,6 +1,5 @@
 <ul>
-	<li><%= link_to( 'Using the application', meta_using_url ) %></li>
+	<li><%= link_to( 'Calculation code comments', meta_comment_url )  %></li>
 	<li><%= link_to( 'Database schema [PNG]', meta_schema_url ) %></li>
 	<li><%= link_to( 'Source code: github.com/ukparliament/egg-timer', 'https://github.com/ukparliament/egg-timer' ) %></li>
-	<li><%= link_to( 'Code comments', meta_comment_url )  %></li>
 </ul>
