--- a/app/views/meta/index.html.erb
+++ b/app/views/meta/index.html.erb
@@ -2,4 +2,5 @@
 	<li><%= link_to( 'Calculation code comments', meta_comment_url )  %></li>
 	<li><%= link_to( 'Database schema [PNG]', meta_schema_url ) %></li>
 	<li><%= link_to( 'Source code: github.com/ukparliament/egg-timer', 'https://github.com/ukparliament/egg-timer' ) %></li>
+	<li><%= link_to( 'Librarian tools', meta_librarian_tools_url ) %></li>
 </ul>
