footer now links to list of calculators rather than interval calculator

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -84,7 +84,7 @@ footer {margin-top:4rem;}
 <footer>
 <nav>
 <p>
-<%= link_to( 'Calculate the number of sitting days in an interval', calculator_interval_url )  %>
+<%= link_to( 'Calculators', calculator_list_url )  %>
 <br>
 <%= link_to( 'Parliaments', parliament_list_url )  %>
 <br>
