replaced footer links to assorted parliamentary time periods to single list

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -86,11 +86,7 @@ footer {margin-top:4rem;}
 <p>
 <%= link_to( 'Calculators', calculator_list_url )  %>
 <br>
-<%= link_to( 'Parliaments', parliament_list_url )  %>
-<br>
-<%= link_to( 'Dissolutions', dissolution_period_list_url )  %>
-<br>
-<%= link_to( 'Sessions', session_list_url )  %>
+<%= link_to( 'Parliamentary time', parliamentary_time_list_url )  %>
 <br>
 <%= link_to( 'Calendar', calendar_list_url )  %>
 <br>
