--- a/app/views/parliament/_table_head.html.erb
+++ b/app/views/parliament/_table_head.html.erb
@@ -2,4 +2,5 @@
 	<%= content_tag( 'td', 'Period' ) %>
 	<%= content_tag( 'td', 'Start date' ) %>
 	<%= content_tag( 'td', 'End date' ) %>
+	<%= content_tag( 'td', 'Wikidata ID' ) %>
 </thead>
