--- a/app/views/parliament/index.html.erb
+++ b/app/views/parliament/index.html.erb
@@ -1,4 +1,10 @@
-
-<ol>
-	<%= render :partial => 'parliament', :collection => @parliaments %>
-</ol>
+<div class="table-wrapper">
+	<table>
+		<thead>
+			<%= render :partial => 'table_head' %>
+		</thead>
+		<tbody>
+			<%= render :partial => 'parliament', :collection => @parliaments %>
+		</tbody>
+	</table>
+</div>
