--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -90,18 +90,26 @@ footer {margin-top:4rem;}
 <nav>
 <p>
 <%= link_to( 'Calculators', calculator_list_url )  %>
-<br>
+-
 <%= link_to( 'Parliamentary time', parliamentary_time_list_url )  %>
-<br>
-<%= link_to( 'Calendar', calendar_list_url )  %>
-<br>
+-
 <%= link_to( 'Houses', house_list_url )  %>
+-
+<%= link_to( 'Calendar', calendar_list_url )  %>
+-
+<%= link_to( 'Calendar subscriptions', meta_subscribe_url )  %>
+
+
 <br>
+<br>
+
 <%= link_to( 'About this application', meta_list_url )  %>
-<br>
+-
 <%= link_to( 'Contact us', "mailto:RIIDMSMailbox@parliament.uk" )  %>
+
 <br>
 <br>
+
 <%= link_to( 'Open Parliament Licence', 'https://www.parliament.uk/site-information/copyright-parliament/open-parliament-licence/' ) %>
 </nav>
 
