session list  now table not list

--- a/app/views/session/_session_with_parliament.html.erb
+++ b/app/views/session/_session_with_parliament.html.erb
@@ -1,1 +1,20 @@
-<%= content_tag( 'li', link_to( session_with_parliament.label_with_parliament, session_show_url( :session => session_with_parliament ) ) ) %>
+<tr>
+	<%= content_tag( 'td', link_to( session_with_parliament.parliament_period.number.ordinalize, parliament_show_url( :parliament => session_with_parliament.parliament_period.id ) ) ) %>
+	<%= content_tag( 'td', link_to( session_with_parliament.number.ordinalize, session_show_url( :session => session_with_parliament ) ) ) %>
+	<%= content_tag( 'td', session_with_parliament.start_date.strftime( '%-d %B %Y' ) ) %>
+	<td>
+		<% if session_with_parliament.end_date -%>
+			<%= session_with_parliament.end_date.strftime( '%-d %B %Y' ) %>
+		<% else -%>
+			-
+		<% end -%>
+	</td>
+	<%= content_tag( 'td', session_with_parliament.citation ) %>
+	<td>
+		<% if session_with_parliament.wikidata_id -%>
+			<%= link_to( session_with_parliament.wikidata_id, "https://www.wikidata.org/wiki/#{session_with_parliament.wikidata_id}" ) %>
+		<% else -%>
+			-
+		<% end -%>
+	</td>
+</tr>
