--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -312,6 +312,102 @@ a.rss {
   padding-left: 30px;
 }
 
+.table-wrapper th {
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  background-color: inherit;
+} */
+
+table {
+  border-collapse: collapse;
+  font-variant-numeric: proportional-nums;
+  margin-bottom: 1em;
+  width: 100%;
+}
+
+table thead {
+  background-color: #373151;
+  color: #fff;
+  position: sticky;
+  top: 0;
+}
+
+table thead a {
+  color: #fff;
+}
+
+/* Sortable tables */
+table.sortable thead a {
+  background-image: url("/sort.png");
+  background-position: left;
+  background-repeat: no-repeat;
+  color: #fff;
+  display: block;
+  padding-left: 1.5em;
+  text-decoration: none;
+}
+
+table.sortable thead .number a {
+  background-position: right;
+  padding-right: 1.5em;
+}
+
+table.sortable.sorted-ascending thead td a.sorted {
+  background-image: url("/sort-up.png");
+}
+
+table.sortable.sorted-ascending thead th a.sorted {
+  background-image: url("/sort-up.png");
+}
+
+table.sortable.sorted-descending thead td a.sorted {
+  background-image: url("/sort-down.png");
+}
+
+table.sortable.sorted-descending thead th a.sorted {
+  background-image: url("/sort-down.png");
+}
+
+tbody tr:nth-child(2n) {
+  background-color: #efefef;
+}
+
+table.multibody tr:nth-child(2n) {
+  background-color: transparent;
+}
+
+table.multibody tr {
+  border-bottom: 1.5px solid #eee;
+}
+
+table.multibody tr:last-child {
+  border-color: #bbb;
+}
+
+td,
+th {
+  padding: 6px;
+  text-align: left;
+  font-weight: normal;
+}
+
+thead td.number {
+  text-align: right;
+}
+
+tbody td.number {
+  text-align: right;
+  font-family: ui-monospace,monospace;
+  font-size: 85%;
+  letter-spacing: -0.4px;
+  padding-left:2rem;
+}
+
+th.number {
+  text-align: right;
+}
+
 footer {
   background-color: #373151;
   color: #fff;
