added nav to calculation using page

--- a/app/views/meta/using.html.erb
+++ b/app/views/meta/using.html.erb
@@ -1,3 +1,5 @@
+<%= render :partial => 'calculator/nav' %>
+
 <%= content_tag( 'h2', 'Legislative reform order scrutiny period' ) %>
 <ul>
 	<%= content_tag( 'li', "Set the start date to the date of laying." ) %>
