--- a/app/views/calculator/_form.html.erb
+++ b/app/views/calculator/_form.html.erb
@@ -1,4 +1,4 @@
-<%= content_tag( 'p', link_to( 'How to use the Egg Timer to calculate a scrutiny period', meta_using_url ) ) %>
+<%= content_tag( 'p', link_to( "How to use the #{$SITE_TITLE} to calculate an anticipated end date for a scrutiny period", meta_using_url ) ) %>
 
 <form action="/egg-timer/calculator/calculate" method="GET" id="calculator">
 	<fieldset>
