added nav to day count form template

--- a/app/views/calculator/day_count_form.html.erb
+++ b/app/views/calculator/day_count_form.html.erb
@@ -1,3 +1,4 @@
+<%= render :partial => 'nav' %>
 <%= content_tag( 'p', link_to( 'Using the calculator', meta_using_url ) ) %>
 
 <form action="" method="GET" id="calculator">
