added nav to interval calc partial

--- a/app/views/calculator/interval.html.erb
+++ b/app/views/calculator/interval.html.erb
@@ -1,3 +1,5 @@
+<%= render :partial => 'nav'%>
+
 <%= content_tag( 'p', "This calculation depends on sitting day data. Sitting day data is complete for both Houses since the 13th June 2017, the start of the #{link_to( '57th Parliament', parliament_show_url( :parliament => 57 ) )}.".html_safe ) %>
 
 
