--- a/app/views/calculator/scrutiny_period.html.erb
+++ b/app/views/calculator/scrutiny_period.html.erb
@@ -1,3 +1,5 @@
+<%= render :partial => 'nav'%>
+
 <%= render :partial => 'form'%>
 
 <%= content_tag( 'p', "The assumptions made in interpreting legislation which form the basis of our calculations are #{link_to( 'documented here', meta_comment_url )}.".html_safe, :class => 'assumptions' ) %>
