calculators link in main nav now byspasses calculator list

--- a/app/views/layouts/header/_nav.html.erb
+++ b/app/views/layouts/header/_nav.html.erb
@@ -1,5 +1,5 @@
 <nav id="header-nav">
-	<%= link_to( 'Calculators', calculator_list_url, :class => 'calculators' )  %>
+	<%= link_to( 'Calculators', calculator_form_url, :class => 'calculators' )  %>
 	<%= link_to( 'Parliamentary time', parliamentary_time_list_url, :class => 'parliamentary-time' )  %>
 	<%= link_to( 'Houses', house_list_url, :class => 'houses' )  %>
 	<%= link_to( 'Calendar', calendar_list_url, :class => 'calendar' )  %>
