added styling for selected time period section in main nav

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -206,6 +206,9 @@ nav#header-nav a:hover {
 body.section-calculators nav#header-nav a.calculators {
 	border-bottom-color: #fff;
 }
+body.section-time-periods nav#header-nav a.time-periods {
+	border-bottom-color: #fff;
+}
 
 main {
   color: #4d4d4d;
