removed houses from main nav, parliamentary time now time periods

--- a/app/views/layouts/header/_nav.html.erb
+++ b/app/views/layouts/header/_nav.html.erb
@@ -1,7 +1,6 @@
 <nav id="header-nav">
 	<%= link_to( 'Calculators', calculator_form_url, :class => 'calculators' )  %>
-	<%= link_to( 'Parliamentary time', parliamentary_time_list_url, :class => 'parliamentary-time' )  %>
-	<%= link_to( 'Houses', house_list_url, :class => 'houses' )  %>
+	<%= link_to( 'Time periods', parliamentary_time_list_url, :class => 'time-periods' )  %>
 	<%= link_to( 'Calendar', calendar_list_url, :class => 'calendar' )  %>
 	<%= link_to( 'Calendar subscriptions', meta_subscribe_url, :class => 'subscribe' )  %>
 </nav>
