--- a/app/views/calendar/month.html.erb
+++ b/app/views/calendar/month.html.erb
@@ -1,8 +1,7 @@
 <p>
-<button><%= link_to( 'Previous month', calendar_month_url( :year => @previous_date.year, :month => @previous_date.month ) )  %></button>
+<button><%= link_to( 'Previous month', calendar_month_url( :year => @previous_date.strftime( '%Y' ), :month => @previous_date.strftime( '%m' ) ) ) %></button>
 
-<button style="float:right;"><%= link_to( 'Next month', calendar_month_url( :year => @next_date.year, :month => @next_date.month ) )  %></button>
-
+<button style="float:right;"><%= link_to( 'Next month', calendar_month_url( :year => @next_date.strftime( '%Y' ), :month => @next_date.strftime( '%m' ) ) )  %></button>
 </p>
 
 <table>
@@ -17,6 +16,6 @@
 		</tr>
 	</thead>
 	<tbody>
-	<%= render :partial => 'day', :collection => @date_range %>
+		<%= render :partial => 'day', :collection => @date_range %>
 	</tbody>
 </table>
