--- a/app/views/calendar/day.html.erb
+++ b/app/views/calendar/day.html.erb
@@ -1,7 +1,7 @@
 <p>
-<button><%= link_to( 'Previous day', calendar_day_url( :year => @previous_date.year, :month => @previous_date.month, :day =>  @previous_date.day ) )  %></button>
+<button><%= link_to( 'Previous day', calendar_day_url( :year => @previous_date.strftime( '%Y'), :month => @previous_date.strftime( '%m' ), :day =>  @previous_date.strftime( '%d' ) ) )  %></button>
 
-<button style="float:right;"><%= link_to( 'Next day', calendar_day_url( :year => @next_date.year, :month => @next_date.month, :day => @next_date.day ) )  %></button>
+<button style="float:right;"><%= link_to( 'Next day', calendar_day_url( :year => @next_date.strftime( '%Y'), :month => @next_date.strftime( '%m' ), :day => @next_date.strftime( '%d' ) ) )  %></button>
 
 <table>
 	<thead>
@@ -15,7 +15,7 @@
 		</tr>
 	</thead>
 	<tbody>
-	<%= render :partial => 'day', :object => @date %>
+		<%= render :partial => 'day', :object => @date %>
 	</tbody>
 </table>
 
