added styling for selected calendar subscriptions in main nav

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -212,6 +212,9 @@ body.section-time-periods nav#header-nav a.time-periods {
 body.section-calendar nav#header-nav a.calendar {
 	border-bottom-color: #fff;
 }
+body.section-calendar-subscriptions nav#header-nav a.calendar-subscriptions {
+	border-bottom-color: #fff;
+}
 
 main {
   color: #4d4d4d;
