updated class name in main nav

--- a/app/views/layouts/header/_nav.html.erb
+++ b/app/views/layouts/header/_nav.html.erb
@@ -2,5 +2,5 @@
 	<%= link_to( 'Calculators', calculator_form_url, :class => 'calculators' )  %>
 	<%= link_to( 'Time periods', parliamentary_time_list_url, :class => 'time-periods' )  %>
 	<%= link_to( 'Calendar', calendar_list_url, :class => 'calendar' )  %>
-	<%= link_to( 'Calendar subscriptions', meta_subscribe_url, :class => 'subscribe' )  %>
+	<%= link_to( 'Calendar subscriptions', meta_subscribe_url, :class => 'calendar-subscriptions' )  %>
 </nav>
