--- a/app/views/calendar/day.html.erb
+++ b/app/views/calendar/day.html.erb
@@ -3,20 +3,22 @@
 
 <button style="float:right;"><%= link_to( 'Next day', calendar_day_url( :year => @next_date.strftime( '%Y'), :month => @next_date.strftime( '%m' ), :day => @next_date.strftime( '%d' ) ) )  %></button>
 
-<table>
-	<thead>
-		<tr>
-			<th>Date</th>
-			<th>Day</th>
-			<th>Commons day type</th>
-			<th>Commons praying</th>
-			<th>Lords day type</th>
-			<th>Lords praying</th>
-		</tr>
-	</thead>
-	<tbody>
-		<%= render :partial => 'day', :object => @date %>
-	</tbody>
-</table>
+<div class="table-wrapper">
+	<table>
+		<thead>
+			<tr>
+				<th>Date</th>
+				<th>Day</th>
+				<th>Commons day type</th>
+				<th>Commons praying</th>
+				<th>Lords day type</th>
+				<th>Lords praying</th>
+			</tr>
+		</thead>
+		<tbody>
+			<%= render :partial => 'day', :object => @date %>
+		</tbody>
+	</table>
+</div>
 
 <%= render :partial => 'parliamentary_time', :object => @date %>
