--- a/app/views/calendar/month.html.erb
+++ b/app/views/calendar/month.html.erb
@@ -4,18 +4,20 @@
 <button style="float:right;"><%= link_to( 'Next month', calendar_month_url( :year => @next_date.strftime( '%Y' ), :month => @next_date.strftime( '%m' ) ) )  %></button>
 </p>
 
-<table>
-	<thead>
-		<tr>
-			<th>Date</th>
-			<th>Day</th>
-			<th>Commons day type</th>
-			<th>Commons praying</th>
-			<th>Lords day type</th>
-			<th>Lords praying</th>
-		</tr>
-	</thead>
-	<tbody>
-		<%= render :partial => 'day', :collection => @date_range %>
-	</tbody>
-</table>
+<div class="table-wrapper">
+	<table>
+		<thead>
+			<tr>
+				<th>Date</th>
+				<th>Day</th>
+				<th>Commons day type</th>
+				<th>Commons praying</th>
+				<th>Lords day type</th>
+				<th>Lords praying</th>
+			</tr>
+		</thead>
+		<tbody>
+			<%= render :partial => 'day', :collection => @date_range %>
+		</tbody>
+	</table>
+</div>
