--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -325,12 +325,17 @@ a.rss {
   padding-left: 30px;
 }
 
+.table-wrapper  {
+  overflow-x: scroll;
+  scrollbar-width:none;
+}
+
 .table-wrapper th {
   position: sticky;
   top: 0;
   z-index: 1;
   background-color: inherit;
-} */
+}
 
 table {
   border-collapse: collapse;
