--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -426,6 +426,69 @@ th.number {
   text-align: right;
 }
 
+/* Form stuff */
+fieldset {
+	margin-bottom: 1.5rem;
+}
+p.radio {
+	border: 1pt solid #fff;
+	border-radius:0.5rem;
+	padding:0.25rem;
+	width:100%;
+}
+p.radio:hover {
+	border-color: black;
+}
+p.radio * {
+	cursor:pointer;
+}
+input[type=radio] {
+	transform: scale(1.5);
+}
+input[type=date] {
+	border-radius: 0.25rem;
+	font-size: larger;
+	padding: 0.5rem;
+}
+input[type=number] {
+	border-radius:0.25rem;
+	font-size:larger;
+	padding: 0.5rem;
+}
+input:focus {
+	border-color: blue;
+}
+button {
+	background-color: white;
+	border: 2pt solid #373151;
+	border-radius: 0.25rem;
+	color: #373151;
+	cursor: pointer;
+	font-size: 1.2rem;
+	font-weight: bold;
+	padding: 1rem;
+	text-decoration: none;
+}
+button a {
+	color: #373151;
+	text-decoration: none;
+}
+button:hover {
+	background-color: #373151;
+	color: #fff;
+}
+
+/* Result page */
+p.box {
+	background-color: white;
+	border:2pt solid gray;
+	border-radius:0.25rem;
+	color:black;
+	padding: 0.75rem;
+	font-size:larger;
+}
+
+
 footer {
   background-color: #373151;
   color: #fff;
